--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div class="card">
                     <img src="./img/devCard1.jpg" alt="Avatar 1" style="width: 100%;">
                     <div class="container">
-                        <h4>Giovane Batista</h4>
-                        <p>Developer & UX/UI Design</p>
+                        <h4>Mudando de Carreira</h4>
+                        <p>Desenvolvimento de Curso</p>
                     </div>
                 </div>
             </div>
@@ -40,8 +40,8 @@
                 <div class="card">
                     <img src="./img/devCard2.jpg" alt="Avatar 1" style="width: 100%;">
                     <div class="container">
-                        <h4>Giovane Batista</h4>
-                        <p>Developer & UX/UI Design</p>
+                        <h4>Melhores Hosts & AirBnB</h4>
+                        <p>Work, Fun and Production</p>
                     </div>
                 </div>
             </div>
@@ -49,8 +49,8 @@
                 <div class="card">
                     <img src="./img/devCard3.jpg" alt="Avatar 1" style="width: 100%;">
                     <div class="container">
-                        <h4>Giovane Batista</h4>
-                        <p>Developer & UX/UI Design</p>
+                        <h4>Dicas de Equipamentos</h4>
+                        <p>Office in your Back</p>
                     </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
                 <div class="card">
                     <img src="./img/devCard4.jpg" alt="Avatar 1" style="width: 100%;">
                     <div class="container">
-                        <h4>Giovane Batista</h4>
-                        <p>Developer & UX/UI Design</p>
+                        <h4>Motor Home</h4>
+                        <p>Montagem e Aquisição</p>
                     </div>
                 </div>
             </div>
