--- a/index.html
+++ b/index.html
@@ -64,10 +64,32 @@
                 </div>
             </div>
         </div>
-    </main>
-    <footer>
+        <div class="flex-container">
+            <div class="flex-item">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="./img/logoDev.png" alt="LogoSite" style="width: 300px; height: 300px">
+                        </div>
+                        <div class="flip-card-back">
+                            <h3>DevNomade</h3>
+                            <p>Trabalho & Desafios</p>
+                            <p>Material de Treinamento</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-item">
+            </div>
+            <div class="flex-item">
+            </div>
+            <div class="flex-item">
+            </div>
+        </div>
 
-    </footer>
+        <footer>
+
+        </footer>
 </body>
 
 </html>
