--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
         </nav>
     </header>
     <main>
+        <div class="bannerTab">
+            <div id="banner1" class="tabcontent">
+                <h1>Promoção 1</h1>
+                <p>Subtitulo da Promoção</p>
+            </div>
+            <div id="banner2" class="tabcontent">
+                <h1>Promoção 2</h1>
+                <p>Subtitulo da Promoção</p>
+            </div>
+            <div id="banner3" class="tabcontent">
+                <h1>Promoção 3</h1>
+                <p>Subtitulo da Promoção</p>
+            </div>
+            <div id="banner4" class="tabcontent">
+                <h1>Promoção 4</h1>
+                <p>Subtitulo da Promoção</p>
+            </div>
+            <button class="tablink" onclick="openCity('banner1', this, 'red')" id="defaultOpen">Assinatura</button>
+            <button class="tablink" onclick="openCity('banner2', this, 'green')" >Nave PCs</button>
+            <button class="tablink" onclick="openCity('banner3', this, 'blue')" >Kalunga</button>
+            <button class="tablink" onclick="openCity('banner4', this, 'orange')" >Generico</button>
+
+        </div>
         <div class="flex-container">
             <div class="flex-item">
                 <div class="card">
@@ -72,22 +95,72 @@
                             <img src="./img/logoDev.png" alt="LogoSite" style="width: 300px; height: 300px">
                         </div>
                         <div class="flip-card-back">
-                            <h3>DevNomade</h3>
-                            <p>Trabalho & Desafios</p>
-                            <p>Material de Treinamento</p>
+                            <h3>Novidades</h3>
+                            <p>Tecnologias & Frameworks</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="flex-item">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="./img/logoDev.png" alt="LogoSite" style="width: 300px; height: 300px">
+                        </div>
+                        <div class="flip-card-back">
+                            <h3>Discord</h3>
+                            <p>Stackoverflow & Comunidades</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="flex-item">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="./img/logoDev.png" alt="LogoSite" style="width: 300px; height: 300px">
+                        </div>
+                        <div class="flip-card-back">
+                            <h3>DevNomade</h3>
+                            <p>Material Didatico & Imersões</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="flex-item">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="./img/logoDev.png" alt="LogoSite" style="width: 300px; height: 300px">
+                        </div>
+                        <div class="flip-card-back">
+                            <h3>Bootcamps</h3>
+                            <p>Inscrições & Oportunidades</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <footer>
+            <script>
+                function openCity(cityName, elmnt, color) {
+                    var i, tabcontent, tablinks;
+                    tabcontent = document.getElementsByClassName("tabcontent");
+                    for (i = 0; i < tabcontent.length; i++) {
+                        tabcontent[i].style.display = "none";
+                    }
+                    tablinks = document.getElementsByClassName("tablink");
+                    for (i = 0; i < tablinks.length; i++) {
+                        tablinks[i].style.backgroundColor = "";
+                    }
+                    document.getElementById(cityName).style.display = "block";
+                    elmnt.style.backgroundColor = color;
+
+                }
+                // Get the element with id="defaultOpen" and click on it
+                document.getElementById("defaultOpen").click();
+            </script>
 
         </footer>
 </body>
