inseri comentarios explicativos

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head><!--Cabeçario padrão para o sistema reconhecer sua pagina e não fica visivel na pagina-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +12,8 @@
     <title>Minha Primeira Página Web</title>
 </head>
 
-<body class="CorpoCor">
-    <header>
+<body class="CorpoCor"><!--Body é o corpo todo do seu Wsite-->
+    <header><!--header é um tipo de cabeçario para seu site fica visivel na parte superior-->
         <nav>
             <ul>
                 <li><a href="#" class="active">Home</a></li><!-- w3schools (documentação)   //   adobe color (cores) -->
@@ -25,8 +25,8 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="bannerTab">
+    <main><!--main é a parte principal do site como se fosse o meio do site-->
+        <div class="bannerTab"><!--4 Banners de promoção-->
             <div id="banner1" class="tabcontent">
                 <h1>Promoção 1</h1>
                 <p>Subtitulo da Promoção</p>
@@ -49,7 +49,7 @@
             <button class="tablink" onclick="openCity('banner4', this, 'orange')" >Generico</button>
 
         </div>
-        <div class="flex-container">
+        <div class="flex-container"><!--Fotos com a sobra vermelha-->
             <div class="flex-item">
                 <div class="card">
                     <img src="./img/devCard1.jpg" alt="Avatar 1" style="width: 100%;">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-        <div class="flex-container">
+        <div class="flex-container"><!--Imagens animadas-->
             <div class="flex-item">
                 <div class="flip-card">
                     <div class="flip-card-inner">
