--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><!--Cabeçario padrão para o sistema reconhecer sua pagina e não fica visivel na pagina-->
+<head>
+    <!--Cabeçario padrão para o sistema reconhecer sua pagina e não fica visivel na pagina-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +13,10 @@
     <title>Minha Primeira Página Web</title>
 </head>
 
-<body class="CorpoCor"><!--Body é o corpo todo do seu Wsite-->
-    <header><!--header é um tipo de cabeçario para seu site fica visivel na parte superior-->
+<body class="CorpoCor">
+    <!--Body é o corpo todo do seu Wsite-->
+    <header>
+        <!--header é um tipo de cabeçario para seu site fica visivel na parte superior-->
         <nav>
             <ul>
                 <li><a href="#" class="active">Home</a></li><!-- w3schools (documentação)   //   adobe color (cores) -->
@@ -25,31 +28,30 @@
             </ul>
         </nav>
     </header>
-    <main><!--main é a parte principal do site como se fosse o meio do site-->
-        <div class="bannerTab"><!--4 Banners de promoção-->
+    <main>
+        <!--main é a parte principal do site como se fosse o meio do site-->
+        <div class="bannerTab">
+            <!--4 Banners de promoção-->
             <div id="banner1" class="tabcontent">
-                <h1>Promoção 1</h1>
-                <p>Subtitulo da Promoção</p>
+
             </div>
             <div id="banner2" class="tabcontent">
-                <h1>Promoção 2</h1>
-                <p>Subtitulo da Promoção</p>
+ 
             </div>
             <div id="banner3" class="tabcontent">
-                <h1>Promoção 3</h1>
-                <p>Subtitulo da Promoção</p>
+
             </div>
             <div id="banner4" class="tabcontent">
-                <h1>Promoção 4</h1>
-                <p>Subtitulo da Promoção</p>
+
             </div>
-            <button class="tablink" onclick="openCity('banner1', this, 'red')" id="defaultOpen">Assinatura</button>
-            <button class="tablink" onclick="openCity('banner2', this, 'green')" >Nave PCs</button>
-            <button class="tablink" onclick="openCity('banner3', this, 'blue')" >Kalunga</button>
-            <button class="tablink" onclick="openCity('banner4', this, 'orange')" >Generico</button>
+            <button class="tablink" onclick="openCity('banner1', this, '#d97ea8')" id="defaultOpen">Assinatura</button>
+            <button class="tablink" onclick="openCity('banner2', this, '#513370')">Nave PCs</button>
+            <button class="tablink" onclick="openCity('banner3', this, '#0468bf')">Kalunga</button>
+            <button class="tablink" onclick="openCity('banner4', this, '#d97ea8')">Generico</button>
 
         </div>
-        <div class="flex-container"><!--Fotos com a sobra vermelha-->
+        <div class="flex-container">
+            <!--Fotos com a sobra vermelha-->
             <div class="flex-item">
                 <div class="card">
                     <img src="./img/devCard1.jpg" alt="Avatar 1" style="width: 100%;">
@@ -87,7 +89,8 @@
                 </div>
             </div>
         </div>
-        <div class="flex-container"><!--Imagens animadas-->
+        <div class="flex-container">
+            <!--Imagens animadas-->
             <div class="flex-item">
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -141,28 +144,28 @@
                 </div>
             </div>
         </div>
-
-        <footer>
-            <script>
-                function openCity(cityName, elmnt, color) {
-                    var i, tabcontent, tablinks;
-                    tabcontent = document.getElementsByClassName("tabcontent");
-                    for (i = 0; i < tabcontent.length; i++) {
-                        tabcontent[i].style.display = "none";
-                    }
-                    tablinks = document.getElementsByClassName("tablink");
-                    for (i = 0; i < tablinks.length; i++) {
-                        tablinks[i].style.backgroundColor = "";
-                    }
-                    document.getElementById(cityName).style.display = "block";
-                    elmnt.style.backgroundColor = color;
-
+    </main>
+    <footer>
+        <script>
+            function openCity(cityName, elmnt, color) {
+                var i, tabcontent, tablinks;
+                tabcontent = document.getElementsByClassName("tabcontent");
+                for (i = 0; i < tabcontent.length; i++) {
+                    tabcontent[i].style.display = "none";
                 }
-                // Get the element with id="defaultOpen" and click on it
-                document.getElementById("defaultOpen").click();
-            </script>
+                tablinks = document.getElementsByClassName("tablink");
+                for (i = 0; i < tablinks.length; i++) {
+                    tablinks[i].style.backgroundColor = "";
+                }
+                document.getElementById(cityName).style.display = "block";
+                elmnt.style.backgroundColor = color;
 
-        </footer>
+            }
+            // Get the element with id="defaultOpen" and click on it
+            document.getElementById("defaultOpen").click();
+        </script>
+
+    </footer>
 </body>
 
 </html>
