aula11 - formulario part 1

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <!--header é um tipo de cabeçario para seu site fica visivel na parte superior-->
         <nav>
             <ul>
-                <li><a href="#" class="active">Home</a></li><!-- w3schools (documentação)   //   adobe color (cores) -->
-                <li><a href="#">Dev. Team</a></li>
+                <li><a href="./index.html" class="active">Home Page</a></li><!-- w3schools (documentação)   //   adobe color (cores) -->
+                <li><a href="./cadastro.html">Dev. Team</a></li>
                 <li><a href="#">Colaboradores</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Empresa</a></li>
@@ -44,9 +44,9 @@
             <div id="banner4" class="tabcontent">
 
             </div>
-            <button class="tablink" onclick="openCity('banner1', this, '#d97ea8')" id="defaultOpen">Assinatura</button>
-            <button class="tablink" onclick="openCity('banner2', this, '#513370')">Nave PCs</button>
-            <button class="tablink" onclick="openCity('banner3', this, '#0468bf')">Kalunga</button>
+            <button class="tablink" onclick="openCity('banner1', this, '#282a48')" id="defaultOpen">Assinatura</button>
+            <button class="tablink" onclick="openCity('banner2', this, '#3b3945')">Nave PCs</button>
+            <button class="tablink" onclick="openCity('banner3', this, '#080808')">Kalunga</button>
             <button class="tablink" onclick="openCity('banner4', this, '#d97ea8')">Generico</button>
 
         </div>
