--- a/projetos.html
+++ b/projetos.html
@@ -21,10 +21,10 @@
             <ul>
                 <li><a href="./index.html" class="active">Home Page</a></li><!-- w3schools (documentação)   //   adobe color (cores) -->
                 <li><a href="./cadastro.html">Dev. Team</a></li>
-                <li><a href="#">Colaboradores</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Empresa</a></li>
-                <li><a href="#">Contatos</a></li>
+                <li><a href="./colaboradores.html">Colaboradores</a></li>
+                <li><a href="./projetos.html">Projetos</a></li>
+                <li><a href="./empresa.html">Empresa</a></li>
+                <li><a href="./cadastro.html">Contatos</a></li>
             </ul>
         </nav>
     </header>
