--- a/cadastro.html
+++ b/cadastro.html
@@ -19,23 +19,38 @@
         <!--header é um tipo de cabeçario para seu site fica visivel na parte superior-->
         <nav>
             <ul>
-                <li><a href="./index.html" class="active">Home Page</a></li><!-- w3schools (documentação)   //   adobe color (cores) -->
+                <li><a href="./index.html" class="active">Home Page</a></li>
+                <!-- w3schools (documentação)   //   adobe color (cores) -->
                 <li><a href="./cadastro.html">Dev. Team</a></li>
-                <li><a href="#">Colaboradores</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Empresa</a></li>
-                <li><a href="#">Contatos</a></li>
+                <li><a href="./colaboradores.html">Colaboradores</a></li>
+                <li><a href="./projetos.html">Projetos</a></li>
+                <li><a href="./empresa.html">Empresa</a></li>
+                <li><a href="./contatos.html">Contatos</a></li>
             </ul>
         </nav>
     </header>
     <main>
-      <div class="card">
-          <div id="bannerForm"></div>
-          <div class="container">
-             <div class="form-container">
-             </div>
-          </div>
-      </div>  
+        <div class="card">
+            <div id="bannerForm"></div>
+            <div class="container" style="margin-top: 45px; height: 720px;">
+                <div class="form-container">
+                    <h1>Cadastre-se no DevNomade</h1>
+                    <p>Preencha o Formulário para fazer parte desta comunidade</p>
+                    <label for="email">E-mail</label>
+                    <input type="text" name="email" id="email" placeholder="Entre com seu e-mail." required>
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" id="senha" placeholder="Digite a senha." required>
+                    <label for="repete-senha">Repita sua senha.</label>
+                    <input type="password" name="repete-senha" id="repete-senha" placeholder="Repetir senha." required>
+                    <button type="submit" class="registerbtn">Registrar</button>
+                    <hr>
+                    <p>Para criar sua conta aceite os <a href="#">termos de uso</a>.</p>
+                </div>
+                <div class="form-container signin">
+                    <p>Você já tem uma conta? <a href="#">Faça seu login</a>.</p>
+                </div>
+            </div>
+        </div>
 
     </main>
     <footer>
