--- a/colaboradores.html
+++ b/colaboradores.html
@@ -24,7 +24,7 @@
                 <li><a href="./colaboradores.html">Colaboradores</a></li>
                 <li><a href="./projetos.html">Projetos</a></li>
                 <li><a href="./empresa.html">Empresa</a></li>
-                <li><a href="./cadastro.html">Contatos</a></li>
+                <li><a href="./contatos.html">Contatos</a></li>
             </ul>
         </nav>
     </header>
